feat: Enable additional eslint rules

--- a/src/app/common/dialog/bs-dialog-container/bs-dialog-container.component.html
+++ b/src/app/common/dialog/bs-dialog-container/bs-dialog-container.component.html
@@ -1,5 +1,5 @@
 <div class="modal-dialog modal-dialog-scrollable modal-lg">
 	<div class="modal-content">
-		<ng-template cdkPortalOutlet></ng-template>
+		<ng-template cdkPortalOutlet />
 	</div>
 </div>
