--- a/src/app/common/modal/modal/modal.component.html
+++ b/src/app/common/modal/modal/modal.component.html
@@ -7,7 +7,7 @@
 </section>
 
 <section class="modal-body">
-	<ng-content></ng-content>
+	<ng-content />
 </section>
 
 <section class="modal-footer">
