--- a/src/app/common/table/sidebar/sidebar.component.html
+++ b/src/app/common/table/sidebar/sidebar.component.html
@@ -11,5 +11,5 @@
 	></button>
 </div>
 <div class="sidebar-body" [class.card-body]="showInCard()">
-	<ng-content></ng-content>
+	<ng-content />
 </div>
