--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
@@ -1,6 +1,6 @@
 <div class="text-nowrap">
-	<button class="px-0">
-		<ng-content></ng-content>
+	<button class="px-0" type="button">
+		<ng-content />
 
 		@if (sortable()) {
 			<span class="fa-stack">
