--- a/src/app/core/eua/user-eua.component.html
+++ b/src/app/core/eua/user-eua.component.html
@@ -9,7 +9,7 @@
 					}
 				</h1>
 				<!-- Alert Notifications -->
-				<system-alert></system-alert>
+				<system-alert />
 				<form name="userForm" role="form" autocomplete="off">
 					<div class="card mt-3">
 						<div class="card-header">
