--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -25,7 +25,7 @@
 		</div>
 
 		@if (feedback.type === 'general feedback') {
-			<ng-container *ngTemplateOutlet="textInput"></ng-container>
+			<ng-container *ngTemplateOutlet="textInput" />
 		}
 
 		<div class="form-check">
@@ -42,7 +42,7 @@
 		</div>
 
 		@if (feedback.type === 'feature request') {
-			<ng-container *ngTemplateOutlet="textInput"></ng-container>
+			<ng-container *ngTemplateOutlet="textInput" />
 		}
 
 		<div class="form-check">
@@ -131,7 +131,7 @@
 				<label class="form-check-label mb-2" for="subtype-option-5">Unsure</label>
 			</div>
 			<h3 class="pt-2">What happened?</h3>
-			<ng-container *ngTemplateOutlet="textInput"></ng-container>
+			<ng-container *ngTemplateOutlet="textInput" />
 		}
 
 		<ng-template #textInput>
@@ -146,8 +146,7 @@
 						[(ngModel)]="feedback.classification"
 						[clearable]="false"
 						[items]="classificationOptions()"
-					>
-					</ng-select>
+					/>
 				</div>
 			}
 
