--- a/src/app/core/help/help.component.html
+++ b/src/app/core/help/help.component.html
@@ -20,7 +20,7 @@
 	<div class="col-lg-9 col-xl-10 h-100" role="main">
 		<section class="card h-100">
 			<div class="card-body overflow-auto">
-				<router-outlet></router-outlet>
+				<router-outlet />
 			</div>
 		</section>
 	</div>
