--- a/src/app/core/signin/signin.component.html
+++ b/src/app/core/signin/signin.component.html
@@ -2,7 +2,7 @@
 	<!-- PKI Authentication Strategy -->
 	@if (pkiMode()) {
 		<div class="signin-container mx-auto mt-5">
-			<loading-spinner message="Signing In..." [hidden]="error()"> </loading-spinner>
+			<loading-spinner message="Signing In..." [hidden]="error()" />
 			<div class="text-center text-danger" [hidden]="!error()">
 				<p>Unable to authenticate:</p>
 				<strong>{{ error() }}</strong>
