--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -11,7 +11,7 @@
 <section class="site-body">
 	<site-navbar>
 		<main class="site-content h-100 overflow-auto" id="app-content" cdkScrollable tabindex="-1">
-			<ng-content></ng-content>
+			<ng-content />
 		</main>
 	</site-navbar>
 </section>
