--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -1,6 +1,6 @@
 <section class="view-team-container">
 	<!-- Alert Notifications -->
-	<system-alert></system-alert>
+	<system-alert />
 
 	<div class="d-flex mb-3">
 		<h1>{{ team().name }}</h1>
@@ -24,6 +24,6 @@
 		}
 	</ul>
 	<div class="view-team-section-container">
-		<router-outlet></router-outlet>
+		<router-outlet />
 	</div>
 </section>
