--- a/src/app/site/example/alerts/alerts.component.html
+++ b/src/app/site/example/alerts/alerts.component.html
@@ -2,7 +2,7 @@
 	<h1>System Alerts</h1>
 	<div class="row mt-3">
 		<div class="col-md-12">
-			<system-alert></system-alert>
+			<system-alert />
 		</div>
 	</div>
 
@@ -48,5 +48,5 @@
 		</div>
 	</div>
 
-	<button class="btn btn-primary" (click)="addAlert()">Add Alert</button>
+	<button class="btn btn-primary" type="button" (click)="addAlert()">Add Alert</button>
 </div>
