--- a/src/app/common/flyout/flyout.component.html
+++ b/src/app/common/flyout/flyout.component.html
@@ -2,6 +2,7 @@
 	<button
 		class="btn btn-primary flyout-btn d-flex align-items-center"
 		data-inline="true"
+		type="button"
 		(click)="toggle()"
 	>
 		{{ label() }}
@@ -9,6 +10,6 @@
 	</button>
 
 	<div class="flyout-content" #flyoutContentContainer>
-		<ng-content></ng-content>
+		<ng-content />
 	</div>
 </section>
