--- a/src/app/common/search-input/search-input.component.scss
+++ b/src/app/common/search-input/search-input.component.scss
@@ -1,12 +1,8 @@
 .search-input-container {
 	width: 350px;
-}
 
-.icon {
-	position: relative;
-	display: flex;
-	align-items: center;
-	margin-left: -20px;
-	float: right;
-	z-index: 500;
+	button {
+		margin-left: -40px;
+		border: 0;
+	}
 }
