--- a/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
+++ b/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
@@ -1,5 +1,6 @@
 <button
 	class="dropdown-toggle dropdown-toggle-hide-caret"
+	type="button"
 	cdkOverlayOrigin
 	#trigger
 	(click)="toggle()"
@@ -38,8 +39,7 @@
 				[loading]="loading()"
 				[typeahead]="input$"
 				(ngModelChange)="onFilterChange()"
-			>
-			</ng-select>
+			/>
 		</div>
 	</div>
 </ng-template>
