--- a/src/app/core/admin/cache-entries/cache-entry-modal/cache-entry-modal.component.html
+++ b/src/app/core/admin/cache-entries/cache-entry-modal/cache-entry-modal.component.html
@@ -1,14 +1,10 @@
 <asy-modal title="Cache Entry Details" hideCancel okText="Close" (cancel)="close()" (ok)="close()">
-	<div class="row">
-		<div class="col-md-12">
-			<label>Key</label>
-			<div>{{ cacheEntry.key }}</div>
+	<div>Key</div>
+	<div class="mb-3">{{ cacheEntry.key }}</div>
 
-			<label>Last Updated</label>
-			<div>{{ cacheEntry.date | utcDate }} ({{ cacheEntry.date | agoDate: false }})</div>
+	<div>Last Updated</div>
+	<div class="mb-3">{{ cacheEntry.ts | utcDate }} ({{ cacheEntry.ts | agoDate: false }})</div>
 
-			<label>Value</label>
-			<pre>{{ cacheEntry.value | json }}</pre>
-		</div>
-	</div>
+	<div>Value</div>
+	<pre>{{ cacheEntry.value | json }}</pre>
 </asy-modal>
