--- a/src/app/core/admin/user/manage-user/manage-user.component.html
+++ b/src/app/core/admin/user/manage-user/manage-user.component.html
@@ -1,6 +1,6 @@
 <section>
 	<!-- Alert Notifications -->
-	<system-alert></system-alert>
+	<system-alert />
 
 	<form
 		role="form"
@@ -83,10 +83,10 @@
 			<div class="mb-3">
 				<label class="form-label" for="password">
 					@if (mode() === 'edit') {
-						<label>New</label>
+						New
 					}
-					Password</label
-				>
+					Password
+				</label>
 				<input
 					class="form-control"
 					id="password"
@@ -97,13 +97,13 @@
 				/>
 			</div>
 			<div class="mb-3">
-				<label class="form-label" for="password2"
-					>Re-enter
+				<label class="form-label" for="password2">
+					Re-enter
 					@if (mode() === 'edit') {
-						<label>New</label>
+						New
 					}
-					Password</label
-				>
+					Password
+				</label>
 				<input
 					class="form-control"
 					id="password2"
@@ -118,7 +118,7 @@
 		@if (proxyPki()) {
 			<!-- Bypass Access Checker -->
 			<div class="mb-3">
-				<label class="form-label">Access Check</label>
+				<div class="form-label">Access Check</div>
 				<div class="form-check m-n1">
 					<input
 						class="form-check-input"
@@ -170,23 +170,21 @@
 		}
 		<!-- Admin only stuff -->
 		<div class="mb-3">
-			<label class="form-label">Roles</label>
-			<div>
-				@for (role of possibleRoles; track role) {
-					<div class="form-check form-check-inline" tooltip="{{ role.description }}">
-						<input
-							class="form-check-input"
-							id="role{{ role.role }}Cb"
-							name="role{{ role.role }}Cb"
-							type="checkbox"
-							[(ngModel)]="user().roles[role.role]"
-						/>
-						<label class="form-check-label" for="role{{ role.role }}Cb">{{
-							role.label
-						}}</label>
-					</div>
-				}
-			</div>
+			<div class="form-label">Roles</div>
+			@for (role of possibleRoles; track role) {
+				<div class="form-check form-check-inline" tooltip="{{ role.description }}">
+					<input
+						class="form-check-input"
+						id="role{{ role.role }}Cb"
+						name="role{{ role.role }}Cb"
+						type="checkbox"
+						[(ngModel)]="user().roles[role.role]"
+					/>
+					<label class="form-check-label" for="role{{ role.role }}Cb">{{
+						role.label
+					}}</label>
+				</div>
+			}
 		</div>
 		<div class="mb-3 text-end">
 			<button class="btn btn-link me-2" type="button" routerLink="/admin/users">
