--- a/src/app/core/help/getting-started/getting-started-help.component.html
+++ b/src/app/core/help/getting-started/getting-started-help.component.html
@@ -41,6 +41,6 @@
 @if (externalLinks().length > 0) {
 	<div class="mt-3">
 		<h3>External Resources</h3>
-		<external-links [links]="externalLinks()"></external-links>
+		<external-links [links]="externalLinks()" />
 	</div>
 }
