--- a/src/app/core/teams/view-team/general-details/general-details.component.html
+++ b/src/app/core/teams/view-team/general-details/general-details.component.html
@@ -5,7 +5,7 @@
 				<h2>Members</h2>
 			</div>
 			<div class="card-body">
-				<list-team-members [team]="team()"></list-team-members>
+				<list-team-members [team]="team()" />
 			</div>
 		</div>
 	</div>
@@ -47,7 +47,7 @@
 				<form id="edit-team-form" #editTeamForm="ngForm">
 					<div class="form-inline-edit" [class.mb-3]="isEditing()">
 						<div class="form-inline-edit-item">
-							<label class="col col-form-label">Name</label>
+							<label class="col col-form-label" for="name">Name</label>
 							@if (!isEditing()) {
 								<div class="col col-form-readonly-value">
 									<div>{{ team().name || '' | titlecase }}</div>
@@ -56,6 +56,7 @@
 								<div class="col">
 									<input
 										class="form-control"
+										id="name"
 										name="name"
 										placeholder="Enter name"
 										required
@@ -65,7 +66,7 @@
 							}
 						</div>
 						<div class="form-inline-edit-item">
-							<label class="col col-form-label">Description</label>
+							<label class="col col-form-label" for="description">Description</label>
 							@if (!isEditing()) {
 								<div class="col col-form-readonly-value">
 									<div style="white-space: pre-wrap">
@@ -76,6 +77,7 @@
 								<div class="col">
 									<textarea
 										class="form-control"
+										id="description"
 										name="description"
 										placeholder="Enter description"
 										[(ngModel)]="teamEditCopy.description"
@@ -90,7 +92,9 @@
 							((team().requiresExternalRoles.length || 0) > 0 || isEditing())
 						) {
 							<div class="form-inline-edit-item">
-								<label class="col col-form-label">External Roles</label>
+								<label class="col col-form-label" for="externalRoles">
+									External Roles
+								</label>
 								@if (!isEditing()) {
 									<div class="col col-form-readonly-value">
 										<div>
@@ -100,12 +104,13 @@
 								} @else {
 									<div class="col">
 										<ng-select
+											id="externalRoles"
 											name="externalRoles"
 											appUserExternalRolesSelect
 											multi-select
 											placeholder="Start typing a role..."
 											[(ngModel)]="teamEditCopy.requiresExternalRoles"
-										></ng-select>
+										/>
 									</div>
 								}
 							</div>
@@ -116,7 +121,9 @@
 							((team().requiresExternalTeams.length || 0) > 0 || isEditing())
 						) {
 							<div class="form-inline-edit-item">
-								<label class="col col-form-label">External Teams</label>
+								<label class="col col-form-label" for="externalTeams">
+									External Teams
+								</label>
 								@if (!isEditing()) {
 									<div class="col col-form-readonly-value">
 										<div>
@@ -126,24 +133,25 @@
 								} @else {
 									<div class="col">
 										<ng-select
+											id="externalTeams"
 											name="externalTeams"
 											multi-select
 											placeholder="Start typing a team..."
 											[(ngModel)]="teamEditCopy.requiresExternalTeams"
-										></ng-select>
+										/>
 									</div>
 								}
 							</div>
 						}
 						<div class="form-inline-edit-item">
-							<label class="col col-form-label">Date Created</label>
+							<div class="col col-form-label">Date Created</div>
 							<div class="col col-form-readonly-value">
 								<div>{{ team().created | utcDate: 'yyyy-MM-dd' }}</div>
 							</div>
 						</div>
 						@if (team().parent) {
 							<div class="form-inline-edit-item">
-								<label class="col col-form-label">Parent</label>
+								<div class="col col-form-label">Parent</div>
 								<div class="col col-form-readonly-value">
 									<div>
 										<a
@@ -189,7 +197,7 @@
 					<h2>Sub-Teams</h2>
 				</div>
 				<div class="card-body">
-					<app-list-sub-teams embedded [parent]="team()"></app-list-sub-teams>
+					<app-list-sub-teams embedded [parent]="team()" />
 				</div>
 			</div>
 		</div>
