--- a/src/app/core/theming/theme-toggle/theme-toggle.component.html
+++ b/src/app/core/theming/theme-toggle/theme-toggle.component.html
@@ -8,6 +8,7 @@
 			<button
 				class="dropdown-item"
 				[class.active]="theme === selectedTheme()"
+				type="button"
 				cdkMenuItem
 				(cdkMenuItemTriggered)="setTheme(theme)"
 			>
